# biananes

./: README.md  pom.xml
deb/: gpucon-0.0.1.deb  sparkniftireader-0.0.2.deb
src/C/: build_libgpucon_deb.sh  build_libsparkniftireader_deb.sh  buildsystem.sh  sparkniftireader-0.0.2.deb
src/C/gpucon/: configure.ac
src/C/gpucon/src/: Makefile.am  gpu_div_by_sd.cu  gpu_div_by_sd.h  gpu_matmul.cu  gpu_matmul.h  gpu_matmul_div.cu  gpu_matmul_div.h
src/C/sparkniftireader/: configure.ac
src/C/sparkniftireader/src/: Makefile.am  sparkniftireader.c
src/R/: createGraph.R  extract_HCP.R
src/R/fastCor/: .DESCRIPTION.swp  DESCRIPTION  NAMESPACE
src/R/fastCor/R/: bigFastCor.R  bigSpastCor.R  fastCor.R
src/R/fastCor/man/: fastCor-package.Rd
src/R/fastCor/src/: Makevars  r_gpu_matmul_div.cpp  symbols.rds
src/main/java/com/sun/jna/: Structure.java
src/main/scala/org/biananes/examples/: Examples.scala
src/main/scala/org/biananes/io/: NiftiTools.scala
src/main/scala/org/biananes/utils/: utils.scala
src/main/scala/sna/: Library.scala
